--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -9,7 +9,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "relay": "relay-compiler"
   },
   "jest": {
     "preset": "jest-expo"
@@ -21,7 +22,6 @@
     "@react-navigation/material-top-tabs": "^7.1.0",
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.6.0",
-    "babel-plugin-relay": "^18.2.0",
     "expo": "~52.0.37",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.7",
@@ -35,7 +35,6 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
-    "graphql": "^16.10.0",
     "graphql-request": "^7.1.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -51,13 +50,18 @@
     "relay-runtime": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/core": "^7.26.9",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
+    "@types/react-relay": "^18.2.0",
     "@types/react-test-renderer": "^18.3.0",
+    "babel-plugin-relay": "^18.2.0",
+    "graphql": "^16.10.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.4",
     "react-test-renderer": "18.3.1",
+    "relay-compiler": "^18.2.0",
+    "relay-config": "^12.0.1",
     "typescript": "^5.3.3"
   },
   "private": true
