--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -59,6 +59,7 @@
     "graphql": "^16.10.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.4",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.3.1",
     "relay-compiler": "^18.2.0",
     "relay-config": "^12.0.1",
