--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "sportsbet-mobile",
+  "name": "betr",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -27,7 +26,7 @@
     "expo-constants": "~17.0.7",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
-    "expo-linear-gradient": "~14.0.2",
+    "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.22",
@@ -35,7 +34,6 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
-    "graphql-request": "^7.1.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
@@ -53,8 +51,8 @@
     "@babel/core": "^7.26.9",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
-    "@types/react-relay": "^18.2.0",
     "@types/react-test-renderer": "^18.3.0",
+    "@types/relay-runtime": "^18.2.5",
     "babel-plugin-relay": "^18.2.0",
     "graphql": "^16.10.0",
     "jest": "^29.2.1",
